--- a/.env
+++ b/.env
@@ -5,3 +5,4 @@ VITE_CLOUDINARY_UPLOAD_PRESET=cuddledate
 
 # API Configuration
 VITE_API_BASE_URL=http://localhost:3001/api
+GOOGLE_CLOUD_PROJECT=civic-automata-465910-r3
